--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,8 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+terraform/main.tf
+terraform/.terraform.lock.hcl
+*cloud_config.yaml
+terraform/key.json
+*.code-workspace
