--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,7 @@ override.tf.json
 .terraformrc
 terraform.rc
 */main.tf
-*/.terraform.lock.hcl
+**/.terraform.lock.hcl
 *cloud_config.yaml
-*/key.json
+**/key.json
 *.code-workspace
